@@ -2,7 +2,6 @@ package org.unicitylabs.sdk.api;
 
 import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -89,8 +88,7 @@ public class JsonRpcAggregatorClient implements AggregatorClient {
    * @return block height
    */
   public CompletableFuture<Long> getBlockHeight() {
-    return this.transport.request("get_block_height", Collections.emptyMap(),
-            BlockHeightResponse.class)
+    return this.transport.request("get_block_height", Map.of(), BlockHeightResponse.class)
         .thenApply(BlockHeightResponse::getBlockNumber);
   }
 }
